# cpp-promise-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cpp-demo.sln  reformat.sh
boost-future-pain/: CMakeLists.txt  FutureFactory.cpp  FutureFactory.h  MainDispatcher.cpp  MainDispatcher.h  main.cpp  pain-level.h  stdafx.h
cef_app/: CMakeLists.txt  main.cpp  simple_app.cpp  simple_app.h  simple_handler.cpp  simple_handler.h
cmake/: add_cef_based_executable.cmake  enable-cxx17.cmake  use-msvc-static-runtime.cmake  use-vcpkg.cmake
console-app/: CMakeLists.txt  FutureFactory.cpp  FutureFactory.h  MainDispatcher.cpp  MainDispatcher.h  main.cpp  stdafx.h
cpp-demo/: CMakeLists.txt  libpromisewin32.sln
cpp-demo/app/: MainDispatcher.cpp  MainDispatcher.h  main.cpp
cpp-demo/libpromise/: AsioThreadPool.cpp  AsioThreadPool.h  Win32EventLoop.cpp  Win32EventLoop.h  Win32NonBlockingDispatcher.cpp
cpp-demo/libpromise/platform/: AsioEventLoop.cpp  AsioEventLoop.h  IDispatcher.h  IEventLoop.h  Win32NonBlockingDispatcher.cpp  Win32NonBlockingDispatcher.h
cpp-demo/libpromise/promise/: IPromise.h  IPromisePtr.h  Promise.h  PromiseFactory.cpp  PromiseFactory.h
docs/: rationale.md
httpbin-app/: CMakeLists.txt  main.cpp
libcefbridge/: BindRemoteCall.h  CMakeLists.txt  cef_utils.h  stdafx.cpp  stdafx.h
libcefbridge/browser/: MessageRouterBrowserSide.cpp  MessageRouterBrowserSide.h
libcefbridge/common/: BindRemoteCall_detail.h  ClientApp.cpp  ClientApp.h  Errors.h  FormatJavascriptArguments.cpp  FormatJavascriptArguments.h  JavascriptArgumentsAdapter.cpp  JavascriptArgumentsAdapter.h  ReturnValueConverter.h  is_any_of.h
libcefbridge/renderer/: ClientAppRenderer.cpp  ClientAppRenderer.h
libhttp/: AsyncHttpClient.cpp  AsyncHttpClient.h  CMakeLists.txt  CurlRAII.cpp  CurlRAII.h  CurlUtils.cpp  CurlUtils.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  IAsyncHttpClient.h  IHttpResponse.h  JoinableThread.h  erase_if.h
libpromise/: CMakeLists.txt  Types.h  libpromisewin32.vcxproj  stdafx.h
libpromise/platform/: AsioEventLoop.cpp  AsioEventLoop.h  AsioThreadPool.cpp  AsioThreadPool.h  BindWeakPtr.h  Expected.cpp  Expected.h  IDispatcher.h  IEventLoop.h  Win32EventLoop.cpp  Win32EventLoop.h  Win32NonBlockingDispatcher.cpp  Win32NonBlockingDispatcher.h
libpromise/promise/: AsyncCallFactory.h  CallFunctionAsync.h  IPromise.h  IPromisePtr.h  Promise.cpp  Promise.h  PromiseFactory.cpp  PromiseFactory.h  PromiseObject.h  promise_detail.h
libpromisewin32/libpromisewin32/: IDispatcher.h  IEventLoop.h  Win32EventLoop.cpp  Win32NonBlockingDispatcher.h  libpromisewin32.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
promise-app/: CMakeLists.txt  MainDispatcher.cpp  MainDispatcher.h  main.cpp  stdafx.h
